[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pystring"
version = "0.1.0"
description = "High-performance string processing library with C++/Python bindings"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pybind11>=2.6.0"]